# rust-riscv

./: .gitignore  Cargo.toml  README.md  build.sh  clean.sh  install.sh  setup.sh
patches/: libc-rs.patch  rust-std.patch  rustc.patch
spec/: riscv64gc-unknown-linux-gnu.json
